--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ a {
 
 .col-small {
     width: 40%;
-    padding: 30px 30px 0px 20px ;
+    padding: 30px 30px 20px 0 ;
 }
 
 .col-large {
@@ -73,7 +73,7 @@ header li {
 /* MAIN */
 /* jumbotron */
 .container-large {
-    width: 81%;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -83,22 +83,28 @@ header li {
 
 .cta {
     display: inline-block;
-    /* padding: 20px 0 0 20px; */
+    padding-top: 30px;
 }
 
 .undo-cta {
-    padding: 10px 0 0 20px;
-   
+    padding: 10px 0 20px 0;
+    font-size: 14px;
 }
 
 .arrow-down {
-    font-size: 40px;
+    font-size: 45px;
+    padding-top: 10px;
+}
+
+.jumbotron img {
     padding-top: 30px;
+
 }
 /* common */
 h1 {
     font-size: 65px;
-    padding-left: 15px;
+    padding-top: 50px;
+    
 }
 
 /* END MAIN */
