--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,21 @@
     box-sizing: border-box;
 }
 
+h1 {
+    font-size: 65px;
+    padding-top: 50px;  
+}
+
 /* COMMON */
 body {
     font-family: 'Open Sans', sans-serif;
 }
 
+.container-small {
+    width: 60%;
+    margin: 0 auto;
+
+}
 .flex {
     display: flex;
 }
@@ -36,6 +46,11 @@ a {
 
 .col-large {
     width: 60%;
+}
+
+h2 {
+    font-size: 35px;
+    padding: 100px 0 50px 0;
 }
 /* END COMMON */
 
@@ -100,12 +115,37 @@ header li {
     padding-top: 30px;
 
 }
-/* common */
-h1 {
-    font-size: 65px;
-    padding-top: 50px;
-    
+
+/* business dropobox plan */
+/* circles */
+.circle {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  display: inline-block;
 }
+
+.selected {
+    border: 5px solid #0b60ff;
+}
+
+.unselected {
+    border: 1px solid grey; 
+}
+.circle,
+.billing {
+    vertical-align: middle;
+    margin: 0 2px 0px 2px;
+}
+
+.billing-type {
+    margin-bottom: 30px;
+}
+
+
+
+/* common */
+
 
 /* END MAIN */
 
