--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 h1 {
     font-size: 70px;
-    padding-top: 50px;  
+    padding-top: 70px;  
 }
 
 /* COMMON */
@@ -37,6 +37,7 @@ a {
     background-color:#0b60ff ;
     color: white;
     padding: 8px 20px;
+    text-align: center;
 }
 
 .col-small {
@@ -49,8 +50,13 @@ a {
 }
 
 h2 {
-    font-size: 35px;
+    font-size: 40px;
     padding: 100px 0 50px 0;
+}
+
+.padding-bottom-block {
+    margin-bottom: 120px;
+    display: inline-block;
 }
 /* END COMMON */
 
@@ -116,13 +122,16 @@ main {
 
 .arrow-down {
     font-size: 45px;
-    padding-top: 10px;
+    padding-top: 5px;
 }
 
 .jumbotron img {
-    padding-top: 30px;
+    width: 110%;
+    height: 110%;
     position: relative;
-    top: 100;
+    top: 33px;
+    right: 10px;
+    bottom:40px;
 
 
 }
@@ -156,7 +165,7 @@ main {
 /* subsubscription colums */
 .col-container {
     justify-content: space-between;
-    font-size: 13px;
+
 }
 
 .column-header {
@@ -167,7 +176,8 @@ main {
 
 .column {
     width: calc((100% / 3) - 30px);
-    border: 1px solid lightgrey;    
+    border: 1px solid lightgrey;
+    font-size: 13px;  
 }
 
 .column-main-container {
@@ -176,7 +186,6 @@ main {
 
 .column-main h3 {
     font-size: 25px;
-    padding-top: ;
 }
 
 .column-main hr {
@@ -185,6 +194,7 @@ main {
 
 .column-main h4 {
     padding: 30px 0 20px 0;
+    font-size: 16px;
 }
 
 .price {
@@ -233,14 +243,39 @@ main {
     font-size: 16px;
 }
 
-.column-large {
-
+.column-large-container {
     border: 1px solid lightgrey;
+    margin-top: 50px;
+    font-size: 13px; 
+}
+
+.column-large {
+    margin: 30px;
 }
 
 .column-large-header {
-    border: 1px solid lightgrey;
+    
+    /* border: 1px solid lightgrey; */
 }
+
+.column-large-main {
+    justify-content: space-between;
+}
+
+.column-large-main h3 {
+    font-size: 25px;
+}
+
+.column-large-main .cta-btn {
+    padding: 8px 90px;
+}
+
+.contacts h4,
+.solutions {
+    padding-top: 20px;
+}
+
+
 
 /* common */
 
