--- a/css/style.css
+++ b/css/style.css
@@ -112,8 +112,7 @@ main {
 /* jumbotron */
 .container-large {
     width: 80%;
-    margin: 0 auto;
-    
+    margin: 0 auto; 
 }
 
 .jumbotron {
@@ -141,19 +140,9 @@ main {
     top: 33px;
     right: 10px;
     bottom:40px;
-
-
 }
 
 /* business dropobox plan */
-/* circles */
-.circle {
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-  display: inline-block;
-}
-
 .selected {
     border: 5px solid #0b60ff;
 }
@@ -161,36 +150,28 @@ main {
 .unselected {
     border: 1px solid grey; 
 }
-.circle,
-.billing {
-    vertical-align: middle;
-    margin: 0 2px 0px 2px;
-}
 
 .billing-type {
     margin-bottom: 30px;
 }
 
+/* common */
+.circle {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    display: inline-block;
+  }
+
+  .circle,
+.billing {
+    vertical-align: middle;
+    margin: 0 2px 0px 2px;
+}
+
 /* subsubscription colums */
 .col-container {
     justify-content: space-between;
-
-}
-
-.column-header {
-    border-bottom: 1px solid lightgrey; 
-    text-align: center;
-    padding: 10px;
-}
-
-.column {
-    width: calc((100% / 3) - 30px);
-    border: 1px solid lightgrey;
-    font-size: 13px;  
-}
-
-.column-main-container {
-    padding: 25px;
 }
 
 .column-main hr {
@@ -202,18 +183,6 @@ main {
     font-size: 16px;
 }
 
-.price {
-    font-weight: 700;
-    padding: 20px 0 10px 0;
-}
-
-.month {
-    /* font-size: 14px; */
-    color:#7e8d97;
-    font-weight: 500;
-    padding-bottom: 45px;
-}
-
 .user,
 .space,
 .functions,
@@ -222,12 +191,62 @@ main {
     padding-bottom: 25px;
 }
 
-.functions {
-    padding-bottom: 50px; 
-}
-
 .cta-buynow {
     padding-top: 25px;  
+}
+
+.column-large-container {
+    border: 1px solid lightgrey;
+    margin-top: 50px;
+    font-size: 13px; 
+}
+
+.column-large {
+    margin: 30px;
+}
+
+.column-large-main {
+    justify-content: space-between;
+}
+
+.column-large-main .cta-btn {
+    padding: 8px 90px;
+}
+
+.contacts h4,
+.solutions {
+    padding-top: 20px;
+}
+
+/* common */
+.column-header {
+    border-bottom: 1px solid lightgrey; 
+    text-align: center;
+    padding: 10px;
+}
+
+.column {
+    width: calc((100% / 3) - 30px);
+    border: 1px solid lightgrey;
+    font-size: 13px;  
+}
+.column-main-container {
+    padding: 25px;
+}
+
+.price {
+    font-weight: 700;
+    padding: 20px 0 10px 0;
+}
+
+.month {
+    color:#7e8d97;
+    font-weight: 500;
+    padding-bottom: 45px;
+}
+
+.functions {
+    padding-bottom: 50px; 
 }
 
 .text-decoration {
@@ -248,38 +267,11 @@ main {
     font-size: 16px;
 }
 
-.column-large-container {
-    border: 1px solid lightgrey;
-    margin-top: 50px;
-    font-size: 13px; 
+/* Partner research */
+
+.text {
+    margin-left: left 20px;
 }
-
-.column-large {
-    margin: 30px;
-}
-
-.column-large-header {
-    
-    /* border: 1px solid lightgrey; */
-}
-
-.column-large-main {
-    justify-content: space-between;
-}
-
-.column-large-main .cta-btn {
-    padding: 8px 90px;
-}
-
-.contacts h4,
-.solutions {
-    padding-top: 20px;
-}
-
-
-
-/* common */
-
 
 /* END MAIN */
 
