--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,15 @@ h3 {
     margin-bottom: 120px;
     display: inline-block;
 }
+
+.column {
+    width: calc((100% / 3) - 30px);
+    font-size: 13px;  
+}
+
+.col-container {
+    justify-content: space-between;
+}
 /* END COMMON */
 
 /* HEADER */
@@ -84,6 +93,10 @@ nav,
     display: flex;
     align-items: center;
     width: 100%;
+}
+
+nav ul {
+    align-items: center;
 }
 
 .support-login {
@@ -166,8 +179,8 @@ main {
 }
 
 /* subsubscription colums */
-.col-container {
-    justify-content: space-between;
+.business-plan .column {
+    border: 1px solid lightgrey;
 }
 
 .column-main hr {
@@ -203,6 +216,7 @@ main {
 
 .column-large-main {
     justify-content: space-between;
+    align-items: center;
 }
 
 .column-large-main .cta-btn {
@@ -221,11 +235,7 @@ main {
     padding: 10px;
 }
 
-.column {
-    width: calc((100% / 3) - 30px);
-    border: 1px solid lightgrey;
-    font-size: 13px;  
-}
+
 .column-main-container {
     padding: 25px;
 }
@@ -274,7 +284,7 @@ main {
     padding-top: 30px;
 }
 
-.text div {
+.side div {
     padding: 30px 0 30px 0;
 }
 
@@ -282,9 +292,32 @@ main {
     border: 1px solid black;
     padding: 10px 20px;
 }
+/* Business operations */
+.wrap {
+    flex-wrap: wrap;
+}
 
+.business-operations .column {
+    padding: 18px;  
+}
 
+.business-operations h2 {
+    padding-bottom: 10px;
+}
 
+.business-operations h4 {
+    font-size: 25px;
+    padding-top: 0;
+    padding-bottom: 20px;
+}
+
+.business-operations a {
+    text-decoration: underline;
+    color: inherit;
+}
+.text-operations {
+    padding-bottom: 60px;
+}
 /* END MAIN */
 
 /* FOOTER */
