--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,63 @@ main {
 .text-operations {
     padding-bottom: 60px;
 }
+
+/* team members */
+.team-members {
+    height: 400px;
+}
+
+.members {
+    /* test */
+    background-color: lightblue;
+}
+
+.main-team-members {
+    /* test */
+    background-color:#f5f5f5;
+}
+
+.col-team {
+    height: 100%;
+    width: calc(100% / 2);
+    position: relative;
+    /* test */
+    border: 1px solid black;
+}
+
+.square {
+    height:200px;
+    width: calc((100% / 3) / 2);
+}
+
+.green {
+    background-color:#a2d49b;
+    border: 10px solid #d0e9cd;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.purple {
+    background-color:#61082b;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.blue {
+    background-color:#0d94cf;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.red {
+    background-color:#fe1b1c;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
 /* END MAIN */
 
 /* FOOTER */
