--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,6 @@ a {
 
 h2 {
     font-size: 40px;
-    padding: 100px 0 50px 0;
 }
 
 h3 {
@@ -158,7 +157,7 @@ main {
     bottom:40px;
 }
 
-/* Business dropobox plan */
+/* Business plan */
 .selected {
     border: 5px solid #0b60ff;
 }
@@ -186,6 +185,11 @@ main {
 }
 
 /* subsubscription colums */
+.business-plan h2 {
+    font-size: 40px;
+    padding: 100px 0 50px 0;
+}
+
 .business-plan .column {
     border: 1px solid lightgrey;
 }
@@ -436,6 +440,36 @@ main {
     position: absolute;
     bottom: 0;
     right: 0;
+}
+
+/* Free Trial */
+.free-trial {
+    background-color: #b3d0e8;
+}
+
+.flex {
+    justify-content: space-between;
+}
+
+.free-trial h2 {
+    color: #61082b;
+}
+
+.free-trial .btn {
+    background-color: white;
+    border: 0px;
+    padding: 8px 70px;
+    position: relative;
+    left: 720px;
+    top: 30px;
+}
+
+.free-trial .flex {
+    padding-top: 100px;
+}
+
+.free-trial .container-small {
+    padding-bottom: 100px;
 }
 /* END MAIN */
 
