--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ h3 {
 }
 
 hr {
+    color: #8f8f8f;
     width: 13%;
 }
 
@@ -405,16 +406,17 @@ main {
     height: 100%;
     width: calc(100% / 2);
     position: relative;
-    /* test
-    border: 1px solid black; */
+    /* flex-grow: 1; */
 }
 
 .square {
     height:200px;
+    /* width: 200px; */
     width: 50%;  
     display: flex;
     justify-content: center;
     align-items: center;
+    /* flex-shrink: 0; */
 }
 
 .square img {
@@ -502,6 +504,25 @@ main {
 /* END MAIN */
 
 /* FOOTER */
+footer {
+    background-color: black;
+    color: white;
+}
+
+footer .container-large {
+    padding: 100px 0 20px 0;
+}
+
+.footer-menu {
+    padding-bottom: 100px;
+}
+
+
+.language-selector {
+    font-size: 12px;
+    color: #999999;
+    padding-top: 50px;
+}
 
 
 /* common */
