--- a/css/style.css
+++ b/css/style.css
@@ -406,7 +406,7 @@ main {
     height: 100%;
     width: calc(100% / 2);
     position: relative;
-    /* flex-grow: 1; */
+    flex-grow: 1;
 }
 
 .square {
@@ -416,7 +416,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* flex-shrink: 0; */
+    flex-shrink: 0;
 }
 
 .square img {
@@ -517,6 +517,9 @@ footer .container-large {
     padding-bottom: 100px;
 }
 
+.footer-menu h5 {
+    font-size: 20px;
+}
 
 .language-selector {
     font-size: 12px;
